--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,11 +1,28 @@
 {
   "manifest_version": 3,
-  "name": "Browser Telemetry (Local)",
-  "version": "0.1.0",
-  "description": "Local browser event capture for personal telemetry",
+  "name": "Browser Telemetry Tracker",
+  "version": "1.0.0",
+  "description": "Track your browsing time and get AI-powered insights",
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "background": {
     "service_worker": "service_worker.js",
     "type": "module"
   },
-  "permissions": ["tabs", "windows", "idle", "storage"]
+  "permissions": ["tabs", "windows", "idle", "storage", "alarms"],
+  "host_permissions": ["http://localhost:5000/*", "https://*.yourdomain.com/*"],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  }
 }
